v3.11.0 (XXXX-XX-XX)
--------------------

* Added metric `rocksdb_cache_peak_allocated` to store the peak memory
  allocation value for in-memory caches.

* Remove leftover in-memory cache tables after dropping collections that
  had their `cacheEnabled` flag set to `true`. Previously some memory 
  could remain allocated in the in-memory cache even after such collections
  were dropped.

* BTS-1315: Fixed spurious occurring failures during Foxx Application
  installation in case a Load Balancer is being used in front of the
  coordinators.

* Updated arangosync to v2.17.0.

* BTS-1343: Removed an error message of endpoint being invalid when attempting
  fetch telemetrics from the servers by having the invalid endpoint as a
  starting point. As telemetrics is transparent to the end user, the error
  message interferes with the user experience if keeps appearing.

* FE-255: add validation for collection, document, graph, view and database
  names.

* Add metric `arangodb_file_descriptors_limit` to expose the system limit for
  the number of open files for the arangod process.

* Fix an issue that causes followers to be dropped due to premature transaction
  abortions as a result of query failures.
  When we have a query that results in a failure this will cause the leaders to
  abort the transaction on the followers. However, if the followers have
  transactions that are shared with leaders of other shards, and if one of those
  leaders has not yet seen the error, then it will happily continue to replicate
  to that follower. But if the follower has already aborted the transaction,
  then it will reject the replication request. Previously this would cause the
  follower to be dropped, but now this should be handled gracefully.


v3.11.0-beta.1 (2023-05-07)
---------------------------

* Updated arangosync to v2.17.0-preview-1.

* FE-243: add support for geo_s2 analyzer.

* Reduce memory usage for incremental sync replication.
